--- a/source/styles/modules/_header.scss
+++ b/source/styles/modules/_header.scss
@@ -23,6 +23,7 @@
 
 	@include media('palm') {
 	    margin-top: 1.75rem;
+      padding-right: $spacing/2;
 	}
 
 	.extra-spacing {
